# authorship-attribution

./: .gitignore  README.md  env.fish  pyproject.toml
.github/ISSUE_TEMPLATE/: feature.yaml  fix.yaml  refactor.yaml
scripts/: extract_metadata.py  filter_authors.py  organise_books.py  prepare_csv_data.py  prepare_json_data.py  take.py
src/authorship_attribution/: __init__.py  cli.py  data.py  features.py  models.py  train.py  utils.py
src/authorship_attribution/__internal/: __init__.py
src/authorship_attribution/_internal/: __init__.py  data_types.py  helpers.py
src/authorship_attribution/_internals/: base_feature_extractors.py  base_features.py  helpers.py
test/: test_avg_word_length_extractor.py  test_imports.py  test_primitive_feature.py
test/extractors/: test_average_sentence_length_in_characters_extractor.py  test_average_sentence_length_in_words_extractor.py  test_average_word_length_extractor.py  test_type_token_ratio_extractor.py
test/features/: test_average_word_length_feature.py  test_primitive_feature.py  test_type_token_ratio_feature.py
tests/features/: test_average_character_frequencies.py  test_average_character_ngram_frequencies.py  test_average_pos_tag_frequencies.py  test_average_punctuation_frequencies.py  test_average_sentence_length_in_characters.py  test_average_stopwords_ratio.py  test_average_type_token_ratio.py  test_average_word_lengths.py  test_average_word_ngram_frequencies.py  test_base.py
tests/features/average/: frequencies.py  test_character_frequencies.py  test_frequencies.py  test_pos_tag_frequencies.py  test_punctuation_frequencies.py  test_word_length.py  test_word_length_feature.py
tests/features/base/: test_feature.py  test_values_feature.py
tests/features/extractors/: test_word_length.py
(+103 files in other folders)
