[project]
name = "authorship-attribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Wannes Vantorre", email = "vantorrewannes@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
]

[project.scripts]
aa = "authorship_attribution:main"
aa-train = "authorship_attribution.cli:train_main"
aa-eval = "authorship_attribution.cli:eval_main"
aa-verify = "authorship_attribution.cli:verify_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
